<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/business"
        android:title="@string/business"
        android:icon="@drawable/ic_baseline_business_24"
        />
    <item
        android:id="@+id/science"
        android:title="@string/science"
        android:icon="@drawable/ic_baseline_science_24"
        />
    <item
        android:id="@+id/sports"
        android:title="@string/sports"
        android:icon="@drawable/ic_baseline_sports_24"
        />
    <item
        android:id="@+id/technology"
        android:title="@string/technology"
        android:icon="@drawable/ic_baseline_laptop_mac_24"
        />
    <item
        android:id="@+id/health"
        android:title="@string/health"
        android:icon="@drawable/ic_baseline_healing_24"
        />

</menu>